# Lego-GPT

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  render.yaml
.codex/: setup.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  depscan.yml  release.yml  trivy.yml
backend/: Dockerfile.cpu  Dockerfile.dev  Dockerfile.gpu  __init__.py  analytics_cli.py  analytics_push_cli.py  api.py  auth.py  bans_cli.py  cleanup.py  cli.py  collab.py  config.py  config_gen_cli.py  detector.py  dev.sh  docker-compose.yml  examples_cli.py  export.py  gateway.py  generation.py  history.py  inference.py  inventory.json  inventory.py  logging_config.py  metrics_ws.py  notify.py  pyproject.toml  review_cli.py  server.py  storage.py  token_cli.py  translate_cli.py  user_cli.py  users_cli.py  worker.py
backend/solver/: __init__.py  base.py  ortools_solver.py  shim.py
backend/tests/: conftest.py  test_analytics_cli.py  test_analytics_push_cli.py  test_api_client_cli.py  test_auth.py  test_cleanup.py  test_cli.py  test_cli_config.py  test_cli_dotenv.py  test_cli_errors.py  test_cli_integration.py  test_collab_cli.py  test_collab_history.py  test_config_gen_cli.py  test_detector.py  test_dotenv.py  test_export_cli.py  test_export_pdf.py  test_generate.py  test_inventory.py  test_logging.py  test_metrics_ws_cli.py  test_notify.py  test_queue.py  test_queue_name_env.py  test_review_cli.py  test_s3.py  test_server.py  test_solver.py  test_static_root.py  test_token_cli.py  test_train_script.py  test_user_cli.py  test_users_cli.py  test_version.py  test_worker_cli.py
detector/: Dockerfile.dev  Dockerfile.train  train.py  worker.py
docs/: ARCHITECTURE.md  ARCHIVE_SITE.md  CHANGELOG.md  COMMUNITY_MAINTENANCE.md  DEPENDENCY_VERSIONS.md  DEPLOYMENT.md  DETECTOR_DATASET.md  EXAMPLES.md  ISSUE_TRIAGE_GUIDE.md  LTS_POLICY.md  PROJECT_BACKLOG.md  RELEASE_PROCESS.md  RENDER_DEPLOYMENT.md  SCALABILITY_BENCHMARKING.md  SPRINT_PLAN.md  SPRINT_PLAN_AFTER_FE.md  SPRINT_PLAN_ARCHIVE.md  SPRINT_PLAN_FOLLOWUP.md  SPRINT_PLAN_FUTURE.md  SPRINT_PLAN_LATEST.md  SPRINT_PLAN_NEW.md  SPRINT_PLAN_NEWEST.md  SPRINT_PLAN_NEXT.md  SPRINT_PLAN_NEXT_GEN.md  SPRINT_PLAN_NEXT_ROUND.md  SPRINT_PLAN_NEXT_STEPS.md  SPRINT_PLAN_POST_AUTOMATION.md  TOKEN_ROTATION.md  index.md
docs/i18n/: README.md
docs/i18n/es/: README.md
docs/i18n/fr/: README.md
docs/sprint-framework/: epic-E07-fastapi-refactor.md
examples/: README.md
frontend/: .env.example  .eslintrc.json  README.md  cypress.config.ts  index.html  lighthouse-budget.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/cypress/e2e/: app.cy.ts  generate.cy.ts  inventory.cy.ts
frontend/cypress/fixtures/: lego.txt
frontend/cypress/support/: e2e.ts
frontend/public/: examples.json  manifest.webmanifest  sunset.html  sw.js
frontend/src/: Analytics.tsx  App.tsx  Collab.tsx  CollabDemo.tsx  Examples.tsx  ImportExamples.tsx  LDrawViewer.tsx  Moderation.tsx  Reports.tsx  Settings.tsx  Tutorial.tsx  i18n.tsx  index.css  main.tsx  three-extras.d.ts  three.d.ts
frontend/src/api/: lego.ts  useCollab.ts  useDetectInventory.ts  useGenerate.ts
frontend/src/lib/: collabQueue.ts  customExamples.ts  db.ts  detectQueue.ts  offlineQueue.ts  push.ts  queue.ts
infra/: README.md
infra/aws/: README.md  main.tf  variables.tf
infra/helm/: Chart.yaml  README.md  values.yaml
infra/helm/templates/: deployment.yaml  redis.yaml  secret.yaml  service.yaml
infra/k8s/: README.md  lego-gpt.yaml
infrastructure/terraform/: README.md
infrastructure/terraform/aws/: main.tf  user-data.sh  variables.tf
infrastructure/terraform/azure/: main.tf  variables.tf
infrastructure/terraform/gcp/: main.tf  startup.sh  variables.tf
scripts/: benchmark_ci.py  benchmark_scalability.py  bump_version.py  generate_jwt.py  lighthouse_ci.js  lint_frontend.js  run_tests.sh  setup_frontend.sh  train_detector.sh
