[project]
name = "lego-gpt-backend"
version = "0.3.0"
description = ""
authors = [
    {name = "Jeff Goodman",email = "jeff@jgaventures.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "ortools (>=9.10,<10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
