[project]
name = "lego-gpt-backend"
version = "0.5.65"
requires-python = ">=3.11"
dependencies = [
    "redis>=5",
    "rq>=1.16",
    "ortools>=9.10",
    "websockets>=12",
]

[project.optional-dependencies]
test = [
    "fakeredis>=2.21",
    "ruff>=0.4",
]
cv = [
    "ultralytics>=8",
    "pillow>=10",
]
s3 = [
    "boto3>=1.34",
]
env = [
    "python-dotenv>=1",
]

[project.scripts]
lego-gpt-server = "backend.gateway:main"
lego-gpt-worker = "backend.worker:main"
lego-detect-worker = "detector.worker:main"
lego-detect-train = "detector.train:main"
lego-gpt-cli = "backend.cli:main"
lego-gpt-cleanup = "backend.cleanup:main"
lego-gpt-token = "backend.token_cli:main"
lego-gpt-export = "backend.export:main"
lego-gpt-collab = "backend.collab:main"
lego-gpt-review = "backend.review_cli:main"
lego-gpt-metrics = "backend.metrics_ws:main"
lego-gpt-examples = "backend.examples_cli:main"
lego-gpt-sync-bans = "backend.bans_cli:main"
lego-gpt-analytics = "backend.analytics_cli:main"
lego-gpt-translate = "backend.translate_cli:main"
lego-gpt-config = "backend.config_gen_cli:main"
lego-gpt-users = "backend.users_cli:main"

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"
